force-app/main/default/objects/CC_Getname_Prod__mdt/CC_Getname_Prod__mdt.object-meta.xml
<CustomObject>
    <label>CC_Getname_Prod</label>
    <pluralLabel>CC_Getname_Prod</pluralLabel>
</CustomObject>