force-app/main/default/objects/CC_Getname_Prod__mdt/fields/notOEMTAA__c.field-meta.xml
<CustomField>
    <fullName>notOEMTAA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>notOEMTAA</label>
    <type>Checkbox</type>
</CustomField>