force-app/main/default/objects/CC_Getname_Prod__mdt/fields/Similar_Values__c.field-meta.xml
<CustomField>
    <fullName>Similar_Values__c</fullName>
    <label>Similar Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>