force-app/main/default/objects/CC_Getname_Prod__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>form</fullName>
                <default>true</default>
                <label>form</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>