force-app/main/default/objects/CC_Getname_Prod__mdt/listViews/All_details.listView-meta.xml
<ListView>
    <fullName>All_details</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Description__c</columns>
    <columns>notOEMTAA__c</columns>
    <columns>Similar_Values__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MasterLabel</field>
        <operation>notEqual</operation>
    </filters>
    <label>All details</label>
    <language>en_US</language>
</ListView>